--- a/src/Components/Hotels/BookHotel.css
+++ b/src/Components/Hotels/BookHotel.css
@@ -4,8 +4,11 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
-  margin-top: -3em;
+
   position: relative;
+}
+.additionals {
+  margin-top: -5em;
 }
 .form-group {
   display: flex;
